# framework_multiagentes

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  executive_summary.md  pyproject.toml  start.md
agentkit/evaluation/: __init__.py  criteria.py  harness.py
agentkit/evaluation/goldens/: dev_agent.json  shop_qa.json  spec_to_pr.json
agentkit/guardrails/: __init__.py  inputs.py  middleware.py  outputs.py  policies.py
agentkit/observability/: __init__.py  logging.py  metrics.py  tracing.py
agentkit/orchestration/: __init__.py  agent_base.py  graph_builder.py  state.py  supervisor.py
agentkit/tools/: __init__.py  file_ops.py  github_ro.py  sql_safe.py  vector_search.py  web_search.py
cases/analyst_agent/: __init__.py  main.py  prompts.py  tools.py
cases/dev_agent/: main.py  tools.py
cases/dev_agent/examples/: feature_health.md  feature_items_list.md
cases/shop_qa/: __init__.py  main.py
cases/spec_to_pr/: main.py  prompts.py
cases/spec_to_pr/examples/: feature_health.md  feature_items_list.md
cases/spec_to_pr/sample_repo/: main.py
docs/: adr-template.md  architecture.md
docs/adr/: 0001-langgraph-vs-crewai.md  0002-guardrails-as-layer.md  0003-langfuse-observability.md  0004-deepeval-quality-gates.md  0005-llm-provider-strategy.md  0006-agents-as-24x7-workforce.md  0007-reproducibility-docker.md
infra/: docker-compose.yml  init.sql
infra/seed/: seed_data.sql
tests/: test_guardrails.py  test_orchestration.py  test_tools.py
ui/: chainlit_app.py
